PM Todd changes made, largely cosmetic except for now you don't need to invite anyone to search for recipes

--- a/app/templates/main/kind_homepage.html
+++ b/app/templates/main/kind_homepage.html
@@ -35,22 +35,22 @@
             <li><b>Connect friends to your Kind Table account:</b> Choose 'Connect a new friend' from the Friends dropdown menu in the navigation bar above. When you enter your friend's email address, one email will be sent to them with a connection request link. Your friend can click on the link and accept the request (or create a new Kind Table account if they were not already users). Now your friend's name and email address will appear in the Friends dropdown above and on your Dashboard page. By clicking on their name, you can review the dietary preferences profile they filled out and add your own private notes.</li>
             <li><b>Create a private profile:</b> You can also choose to create your own profile for a friend by choosing 'Create your own profile for a friend' from the dropdown above. Private profiles are distinguished by not listing an email address next to their name. You will be directed to the profile page you have just created where you can edit all dietary and personal information about this friend.</li>
         </ul>
-<h3 class="bg-info">Step Two: Create a party and add guests - </h3>
+<h3 class="bg-info">Step Two: Create an event and add guests - </h3>
     <ul>
-        <li>Select 'Create a party' from the 'Party' dropdown in the navigation bar above. You will be directed to a profile for the party where you can invite guests by 'Managing the guest list'.</li>
+        <li>Select 'Create a event' from the 'My Events' dropdown in the navigation bar above. You will be directed to a profile for the event where you can invite guests by 'Managing the guest list'.</li>
     </ul>
 <h3 class="bg-info">Step Three: Request beta access -</h3>
     <ul>
-        <li>After you have added at least one friend to a party, a 'Search for recipes' button will appear on the party page. The first time you click on it you will be directed to fill out a form to request Beta Testing Access. Requests will be reviewed promptly and you will get an email when you have been granted full access to all of the features. <a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="below" title="Why Beta Testing" data-content="We are able to use <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular's</a> paid API to access their database of 365,000 customer-added recipes because they have granted me academic access. Help me make this project even better by sending your feedback to <a href='mailto:kindtableapp@gmail.com?Subject=Kind Table App Feedback' target='_top'>kindtableapp@gmail.com">Why have beta testing at all?</a></li>
+        <li>After you have created your event, a 'Search for recipes' button will appear on the event page. The first time you click on it you will be directed to fill out a form to request Beta Testing Access. Requests will be reviewed promptly and you will get an email when you have been granted full access to all of the features. <a role="button" tabindex="0" data-container="body" data-toggle="popover" data-html='true' data-trigger="focus" data-placement="below" title="Why Beta Testing" data-content="We are able to use <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular's</a> paid API to access their database of 365,000 customer-added recipes because they have granted me academic access. Help me make this project even better by sending your feedback to <a href='mailto:kindtableapp@gmail.com?Subject=Kind Table App Feedback' target='_top'>kindtableapp@gmail.com">Why have beta testing at all?</a></li>
     </ul>
 
 <h3 class="bg-info">Step Four: Get your recipes - </h3>
     <ul>
-        <li>From the party profile page, select 'Search for recipes'. All of these recipes should work for the guests you have already invited. Preview a recipe by clicking on the picture or title. Add your own notes in the notes field and click 'Save recipe'. This recipe will now be added to the menu for this party and can be viewed from the party profile page.</li>
+        <li>From the event profile page, select 'Search for recipes'. All of these recipes should work for the guests you have already invited. Preview a recipe by clicking on the picture or title. Add your own notes in the notes field and click 'Save recipe'. This recipe will now be added to the menu for this event and can be viewed from the event profile page.</li>
         <li><b>Search options</b> You can see more variety by selecting one of 25 cuisines or 11 courses from the menu on the left of the search page. You can also deselect the diets, allergies/intolerances and ingredients to avoid that are restricting your search results. The recipes you save will tell you who they work for. Remember to save enough recipes so that everyone you have invited has something to eat.</li>
         <li><b class="bg-danger">Hey! No or few recipes came up!</b> This happens for the following reasons and is no big deal:
             <ul>
-                <li><b class="bg-warning">Most common reason:</b> There are typos in the 'Ingredients to Avoid' that guests added. The <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular's</a> API doesn't know how to handle these. Apparently it doesn't know how to respond if you tell it you would like to avoid 'Muggles'. Weird. Deselecting suspicious ingredients from the menu on the left should give you a better selection. You can create a private profile for your friend with correct information and add that to the party instead. Or, you know, let them know that you can't accommodate their 'tribble' preferences.</li>
+                <li><b class="bg-warning">Most common reason:</b> There are typos in the 'Ingredients to Avoid' that guests added. The <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular's</a> API doesn't know how to handle these. Apparently it doesn't know how to respond if you tell it you would like to avoid 'Muggles'. Weird. Deselecting suspicious ingredients from the menu on the left should give you a better selection. You can create a private profile for your friend with correct information and add that to the event instead. Or, you know, let them know that you can't accommodate their 'tribble' preferences.</li>
                 <li><b class="bg-success">Too many restrictions:</b> No problem! This is what Kind Table was made for. Depending on your friends dietary preferences and the cuisine/courses selected, you may not be seeing enough variety. Deselecting the restrictions in the menu on the left of the screen and resubmitting the search should give you more recipes to choose from. Hovering or clicking on your friends name will show you the reason they follow a diet or avoid an ingredient. If they are willing to pick out that ingredient from your dish, you may still choose to cook it. Or not, if their reason explains that the repercussions of being exposed to these ingredients are severe. Whether your friends preferences are as a result of being health conscious, disliking something or having a serious life-threatening medical condition, we want to make it easier to make your guests welcome.</li>
             </ul>
         </li>
@@ -60,25 +60,25 @@
 
 <h3 class="bg-info">Step Five: Make sure you have a enough food to feed everyone invited -</h3>
     <ul>
-        <li>Review the recipes in the party profile page to make sure that you have saved enough recipes to feed your guests.</li>
+        <li>Review the recipes in the event profile page to make sure that you have saved enough recipes to feed your guests.</li>
     </ul>
 
   <hr>
 
     <h3>That's it! Get ready to cook!</h3> Options:
     <ul>
-        <li><b>Email yourself the menu from the party page.</b> The email includes links and the full text of all the recipes you have selected.</li>
+        <li><b>Email yourself the menu from the event page.</b> The email includes links and the full text of all the recipes you have selected.</li>
 
-        <li><b>Print the recipes</b> You can review and print the recipes by clicking on the recipe links from the party profile. Or just leave the tabs open on your computer to save a trees.</li>
+        <li><b>Print the recipes</b> You can review and print the recipes by clicking on the recipe links from the event profile. Or just leave the tabs open on your computer to save a trees.</li>
 
-        <li><b>Add the recipes to your Spoonacular account:</b> From the party page, click on the recipe link. Below the recipe and above the picture you will find a link for 'View this recipe at Spoonacular'. <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular</a> has many cool features like analyzing the price of the ingredients for your recipe, analyzing nutrition, <mark>scaling your recipe for a bigger or smaller crowd</mark> and other meal planning features.</li>
+        <li><b>Add the recipes to your Spoonacular account:</b> From the event page, click on the recipe link. Below the recipe and above the picture you will find a link for 'View this recipe at Spoonacular'. <a href='http://spoonacular.com/' title='Spoonacular link'>Spoonacular</a> has many cool features like analyzing the price of the ingredients for your recipe, analyzing nutrition, <mark>scaling your recipe for a bigger or smaller crowd</mark> and other meal planning features.</li>
 
-        <li><b>View the original recipe:</b> From the party page, click on the recipe link. Below the recipe and above the picture you will find a link for 'Original Recipe Source'. Spoonacular recipes are added to their database by their customers from all over the internet. You can view the recipe from it's original source and add it to your preferred recipe management system.</li>
+        <li><b>View the original recipe:</b> From the event page, click on the recipe link. Below the recipe and above the picture you will find a link for 'Original Recipe Source'. Spoonacular recipes are added to their database by their customers from all over the internet. You can view the recipe from it's original source and add it to your preferred recipe management system.</li>
 
         <h4>Have fun and send your feedback to me at <a href='mailto:kindtableapp@gmail.com?Subject=Kind Table App Feedback' target='_top'>kindtableapp@gmail.com</a></h4>
                 {% endif %}
             {% else %}
-                <b>Kind Table takes the work out of choosing recipes for a dinner party or holiday event by managing your friends dietary needs and preferences and presenting recipes that would work for all.</b>
+                <b>Kind Table takes the work out of choosing recipes for an event by managing your friends dietary needs and preferences and presenting recipes that would work for all.</b>
             {% endif %}
         </div>
     </div>
