--- a/app/templates/profiles/dashboard.html
+++ b/app/templates/profiles/dashboard.html
@@ -363,7 +363,7 @@
                     {% endif %}
                 </div>
 
-                <h3>Your Upcoming Parties</h3>
+                <h3>Your Upcoming Events</h3>
                 <div id="upcomingparties">
                     {% if upcoming_parties %}
                         <ul>
@@ -379,7 +379,7 @@
                         <span class="text-muted strong">No upcoming parties. Time to plan some!</span>
                     {% endif %}
                 </div>
-                <h3>Your Past Parties</h3>
+                <h3>Your Past Events</h3>
                 <div id="pastparties">
                     {% if past_parties %}
                         <ul>
