--- a/app/templates/spoonacular/saved_recipe.html
+++ b/app/templates/spoonacular/saved_recipe.html
@@ -80,7 +80,7 @@
                 <button type="button" class="btn btn-warning" data-toggle="modal" title="Change the notes for the recipe" data-target="#discardRecipe">Discard recipe</button>
 
 
-                <a href="{{  url_for('profiles.show_party_profile', party_id=party.party_id)  }}" class="btn btn-info btn-sm pull-right" role="button">Back to party</a><br><br>
+                <a href="{{  url_for('profiles.show_party_profile', party_id=party.party_id)  }}" class="btn btn-info btn-sm pull-right" role="button">Back to event profile</a><br><br>
 
 
                 <div class="recipe_notes">
