--- a/app/templates/main/base.html
+++ b/app/templates/main/base.html
@@ -118,12 +118,12 @@ display:none;
                         </ul>    
                     </li>
                     <li class="dropdown" id="partiesDropDown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Parties<span class="caret"></span></a>
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">My Events<span class="caret"></span></a>
                         <ul class="dropdown-menu">
-                            <li><a data-toggle="modal" id="addPartyLink" data-target="#addPartyModal"><b>Create a new party</b></a></li>
+                            <li><a data-toggle="modal" id="addPartyLink" data-target="#addPartyModal"><b>Create a new event</b></a></li>
                             <li role="separator" class="divider"></li>
                             {% if current_user.parties %}
-                            <li class="text-center bg-info small text-muted">Your parties:</li>
+                            <li class="text-center bg-info small text-muted">Your events:</li>
                             <li role="separator" class="divider"></li>
                             {% for party in current_user.parties|sort(attribute='datetime_of_party') %}
                             <li class="myParties"><a href="{{ url_for('profiles.show_party_profile', party_id = party.party_id) }}">{{  party.title  }}</a></li>
