--- a/app/templates/profiles/add_a_party.html
+++ b/app/templates/profiles/add_a_party.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <h4 class="modal-title" id="addPartyModalLabel">Create a New Party</h5>
+    <h4 class="modal-title" id="addPartyModalLabel">Create a New Event</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
