--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class = "row round_hidden_div" style="padding-top: 2em">
 
-                 <span class="text-muted">Select all parties you want to add this friend to.<br><br>Deselecting a checkbox removes this friend from that party.<br><br></span>
+                 <span class="text-muted">Select all parties you want to add this friend to.<br><br>Deselecting a checkbox removes this friend from that event.<br><br></span>
 
                 {% if upcoming_parties %}
                     {% from "_formhelpers.html" import render_field, render_no_label_field %}
@@ -212,7 +212,7 @@
 
                 {% endif %}
 
-                <h3>Upcoming Parties Invited:</h3>
+                <h3>Upcoming Events Attending:</h3>
 
                 <div class="upcomingParties">
                     <div id="upcomingParties">
@@ -231,7 +231,7 @@
                     </div>
                 </div>
 
-                <h3>Past Parties Invited:</h3>
+                <h3>Past Events Attended:</h3>
                 <div id="pastParties">
                     {% if parties_invited %}
                         <ul>
