--- a/app/templates/profiles/email/friend_existing_user.html
+++ b/app/templates/profiles/email/friend_existing_user.html
@@ -8,10 +8,10 @@ If you agree, they will be able to see your profile information and to invite yo
 to dinner parties.
 
 To confirm that you want to become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}) on KindTable, 
-<a href="{{ url_for('profiles.confirm_friendship_with_existing_user', token=token, _external=True) }}">click here</a></p>
+<a href="{{ url_for('profiles.confirm_friendship', token=token, _external=True) }}">click here</a></p>
 
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
-<p>{{ url_for('profiles.confirm_friendship_with_existing_user', token=token, _external=True) }}</p>
+<p>{{ url_for('profiles.confirm_friendship', token=token, _external=True) }}</p>
 
 
 <p>Sincerely,</p>
