--- a/app/templates/profiles/dashboard.html
+++ b/app/templates/profiles/dashboard.html
@@ -238,8 +238,12 @@
 
 <!-- Begin content -->
 
-<h1 class="text-left" style="padding-left: 3em">Dashboard</h1>
-    
+<div class="row" style="padding-top: 3 em">
+<div class="col-md-3 page_title col-md-offset-1"> 
+<h1><span class="glyphicon glyphicon-cog"></span> Dashboard</h1>
+</div>
+</div>   
+
     <div class="row well-spaced" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
             <div class = "row round_div" style="padding-top: 2em">
