--- a/app/templates/profiles/email/friend_existing_user.html
+++ b/app/templates/profiles/email/friend_existing_user.html
@@ -4,10 +4,10 @@
 connect with you on KindTable. </p>
 
 
-If you agree, they will be able to see your profile information and to invite you
-to dinner parties.
+<p>If you agree, they will be able to see your profile information and to invite you
+to dinner parties.</p>
 
-To confirm that you want to become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}) on KindTable, 
+<p>To confirm that you want to become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}) on KindTable, 
 <a href="{{ url_for('profiles.confirm_friendship', token=token, _external=True) }}">click here</a></p>
 
 <p>Alternatively, you can paste the following link in your browser's address bar:</p>
