--- a/app/templates/profiles/email/friend_new_user.html
+++ b/app/templates/profiles/email/friend_new_user.html
@@ -6,15 +6,15 @@ connect with you on KindTable. </p>
 allergies/intolerances (ex: gluten, peanut) and ingredients to avoid (ex: red pepper, pork) and helps
 the host pick recipes that will work for everyone invited to a meal.</p>
 
-<strong>Step One:</strong>
+<h4>Step One:</h4>
 
-Register at Kind Table. Complete a quick registration process to provide your dietary information. Don't have
+<p>Register at Kind Table. Complete a quick registration process to provide your dietary information. Don't have
 any dietary preferences? The process will be even quicker. :) 
 
 <a href="https://www.kindtable.net/auth/register">https://www.kindtable.net/auth/register</a>
 
 
-<strong>Step Two:</strong>
+<h4>Step Two:</h4>
 
 <p>To become friends with {{ friend.first_name}} {{ friend.last_name  }}({{  friend.email  }}), click 
 on the following link and sign in to your KindTable account:</p>
