--- a/app/static/site.css
+++ b/app/static/site.css
@@ -130,6 +130,16 @@ margin:0;
 }
 
 
+.page_title {
+    border: 2px solid;
+    border-radius: 5px;
+    background: #dde9f6;
+    /*background: #f5f5f5;*/
+    padding: 5px;
+    padding-bottom: 1em;
+    margin-bottom: 1em;
+}
+
  .round_hidden_div {
 
     border: 2px solid;
