--- a/app/templates/profiles/friend_profile_editable.html
+++ b/app/templates/profiles/friend_profile_editable.html
@@ -202,33 +202,6 @@
 </div>
 
 
-<div class="modal fade" id="friendEmailModal" tabindex="-1" role="dialog" aria-labelledby="FriendEmailModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content" role="document">
-            <div class="modal-header">
-                <h4 class="modal-title" id="FriendEmailModalLabel">Change Email Address</h4>
-                <div id="flashedalert"></div>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class = "row round_hidden_div" style="padding-top: 2em">
-                    {% from "_formhelpers.html" import render_field %}
-                    <form action="{{ url_for('profiles.changefriendemail') }}" class="form form-horizontal" method="post" role="form" id="emailForm">
-                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-                        <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
-                        {{ render_field(email_form.email, style="width: 75%", rows="1", maxlength=200) }}
-                        {{ render_field(email_form.email2, style="width: 75%", rows="1", maxlength=200) }}<br>
-                        <input type="submit" class="btn btn-sm btn-info" value="Update">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
-                     </form>
-                </div>
-            </div>
-        </div>
-        
-    </div>
-</div>
-
 <div class="modal fade" id="notesModal" tabindex="-1" role="dialog" aria-labelledby="notesModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content" role="document">
@@ -247,7 +220,7 @@
                         <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
                         {{ render_field(notes_form.notes, style="width: 100%", rows="5", maxlength=300, placeholder="Optional") }}
                         <input type="submit" class="btn btn-sm btn-info" value="Update">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-sm btn-danger" id="deletenote">Delete note</button>
+                        <button type="button" class="btn btn-sm btn-danger" id="deletefriendnote">Delete note</button>
                      </form>
                 </div>
             </div>
@@ -290,8 +263,11 @@
 
 <!-- Begin content -->
 
-<h1 class="text-left headerName" style="padding-left: 3em"><span id="headerName">Your Profile for {{  friend_profile.private_profile_title  }}
-</span></h1>
+<div class="row" style="padding-top: 3 em">
+<div class="page_title col-md-offset-1 col-md-10"> 
+<h1><span id="headerName"><span class="glyphicon glyphicon-user"></span> Your Profile for: {{  friend_profile.private_profile_title  }}</span></h1>
+</div>
+</div> 
 
     <div class="row well-spaced dashboard" style="padding-top: 3em">
         <div class="col-md-4 col-md-offset-1">      
