--- a/app/templates/profiles/friend_profile_fixed.html
+++ b/app/templates/profiles/friend_profile_fixed.html
@@ -61,7 +61,7 @@
                         <input type="hidden" name="friend_profile_id" value="{{  friend_profile.profile_id  }}"/>
                         {{ render_field(notes_form.notes, cols="65", rows="5", maxlength=300, placeholder="Optional") }}
                         <input type="submit" class="btn btn-sm btn-info" value="Update">&ensp;<button type="button" class="btn btn-sm btn-default" data-dismiss="modal">Cancel</button>&ensp;
-                        <button type="button" class="btn btn-sm btn-danger" id="deletenote">Delete note</button>
+                        <button type="button" class="btn btn-sm btn-danger" id="deletefriendnote">Delete note</button>
                      </form>
                 </div>
             </div>
@@ -103,10 +103,18 @@
 
 <!-- Begin Content -->
 
-<h1 class="text-left" style="padding-left: 3em">{% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}
+<h1 class="text-left" style="padding-left: 3em"></h1>
+
+
+<div class="row" style="padding-top: 3 em">
+<div class="page_title col-md-offset-1 col-md-10"> 
+<h1><span id="headerName"><span class="glyphicon glyphicon-user"></span> {% if friend_profile.first_name is not none %}{{ friend_profile.first_name }} {{  friend_profile.last_name  }}'s
 {% else %}
-{{ friend_profile.email }}
-{%endif %} Profile</h1>
+{{ friend_profile.email }}'s
+{%endif %} Profile</span></h1>
+</div>
+</div> 
+
 
 
     <div class="row well-spaced" style="padding-top: 3em">
